Add optional and handle null options